--- a/package.json
+++ b/package.json
@@ -10,13 +10,11 @@
     "start": "next start",
     "type-check": "tsc --noEmit"
   },
-  "prettier": {
-    "semi": false,
-    "singleQuote": true
-  },
   "dependencies": {
     "@next/env": "14.1.3",
-    "@sanity/demo": "2.0.0",
+    "@radix-ui/react-accordion": "^1.1.2",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-navigation-menu": "^1.1.4",
     "@sanity/icons": "2.11.2",
     "@sanity/image-url": "1.0.2",
     "@sanity/preview-url-secret": "1.6.4",
@@ -24,8 +22,7 @@
     "@sanity/ui": "2.0.10",
     "@sanity/vision": "3.34.0",
     "@tailwindcss/typography": "0.5.10",
-    "classnames": "2.5.1",
-    "date-fns": "3.6.0",
+    "cva": "^1.0.0-beta.1",
     "next": "14.1.3",
     "next-sanity": "8.4.2",
     "react": "18.2.0",
@@ -34,18 +31,18 @@
     "sanity": "3.34.0",
     "sanity-plugin-asset-source-unsplash": "2.0.1",
     "server-only": "0.0.1",
-    "styled-components": "6.1.8"
+    "styled-components": "6.1.8",
+    "tailwind-merge": "^2.2.2"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.7",
     "@types/react": "18.2.66",
     "autoprefixer": "10.4.18",
     "eslint": "8.57.0",
     "eslint-config-next": "14.1.3",
-    "eslint-plugin-simple-import-sort": "12.0.0",
     "postcss": "8.4.36",
-    "prettier": "3.2.5",
-    "prettier-plugin-packagejson": "2.4.12",
-    "prettier-plugin-tailwindcss": "0.5.12",
+    "prettier": "^3.2.5",
+    "prettier-plugin-tailwindcss": "^0.5.12",
     "tailwindcss": "3.4.1",
     "typescript": "5.4.2"
   }
