--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "rxjs": "7.8.1",
     "sanity": "3.34.0",
     "sanity-plugin-asset-source-unsplash": "2.0.1",
+    "sanity-plugin-iframe-pane": "^3.1.6",
     "sanity-plugin-media": "^2.2.5",
     "server-only": "0.0.1",
     "styled-components": "6.1.8",
