--- a/package.json
+++ b/package.json
@@ -11,24 +11,25 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "@next/env": "14.1.3",
+    "@next/env": "^14.1.4",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-navigation-menu": "^1.1.4",
-    "@sanity/icons": "2.11.2",
-    "@sanity/image-url": "1.0.2",
-    "@sanity/preview-url-secret": "1.6.4",
-    "@sanity/react-loader": "1.9.3",
-    "@sanity/ui": "2.0.10",
-    "@sanity/vision": "3.34.0",
-    "@tailwindcss/typography": "0.5.10",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@sanity/icons": "^2.11.6",
+    "@sanity/image-url": "^1.0.2",
+    "@sanity/preview-url-secret": "^1.6.5",
+    "@sanity/react-loader": "^1.9.5",
+    "@sanity/ui": "^2.0.13",
+    "@sanity/vision": "^3.36.3",
+    "@tailwindcss/typography": "^0.5.12",
     "cva": "^1.0.0-beta.1",
-    "next": "14.1.3",
-    "next-sanity": "8.4.2",
+    "next": "^14.1.4",
+    "next-sanity": "^8.5.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "rxjs": "7.8.1",
-    "sanity": "3.34.0",
+    "sanity": "^3.36.3",
     "sanity-plugin-asset-source-unsplash": "2.0.1",
     "sanity-plugin-iframe-pane": "^3.1.6",
     "sanity-plugin-media": "^2.2.5",
