--- a/package.json
+++ b/package.json
@@ -16,20 +16,20 @@
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-navigation-menu": "^1.1.4",
     "@radix-ui/react-slot": "^1.0.2",
-    "@sanity/icons": "^2.11.6",
+    "@sanity/icons": "^2.11.8",
     "@sanity/image-url": "^1.0.2",
-    "@sanity/preview-url-secret": "^1.6.5",
-    "@sanity/react-loader": "^1.9.5",
-    "@sanity/ui": "^2.0.13",
-    "@sanity/vision": "^3.36.3",
+    "@sanity/preview-url-secret": "^1.6.11",
+    "@sanity/react-loader": "^1.9.16",
+    "@sanity/ui": "^2.1.4",
+    "@sanity/vision": "^3.40.0",
     "@tailwindcss/typography": "^0.5.12",
     "cva": "^1.0.0-beta.1",
-    "next": "^14.1.4",
-    "next-sanity": "^8.5.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "rxjs": "7.8.1",
-    "sanity": "^3.36.3",
+    "next": "^14.2.3",
+    "next-sanity": "^9.0.12",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "rxjs": "^7.8.1",
+    "sanity": "^3.40.0",
     "sanity-plugin-iframe-pane": "^3.1.6",
     "sanity-plugin-media": "^2.2.5",
     "server-only": "0.0.1",
@@ -46,6 +46,6 @@
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.12",
     "tailwindcss": "3.4.1",
-    "typescript": "5.4.2"
+    "typescript": "^5.4.5"
   }
 }
