--- a/package.json
+++ b/package.json
@@ -11,29 +11,29 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "@next/env": "^14.1.4",
+    "@next/env": "^14.2.3",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-navigation-menu": "^1.1.4",
     "@radix-ui/react-slot": "^1.0.2",
     "@sanity/icons": "^2.11.8",
     "@sanity/image-url": "^1.0.2",
-    "@sanity/preview-url-secret": "^1.6.11",
-    "@sanity/react-loader": "^1.9.16",
-    "@sanity/ui": "^2.1.4",
-    "@sanity/vision": "^3.40.0",
+    "@sanity/preview-url-secret": "^1.6.13",
+    "@sanity/react-loader": "^1.9.19",
+    "@sanity/ui": "^2.1.10",
+    "@sanity/vision": "^3.42.1",
     "@tailwindcss/typography": "^0.5.12",
     "cva": "^1.0.0-beta.1",
     "next": "^14.2.3",
-    "next-sanity": "^9.0.12",
+    "next-sanity": "^9.0.20",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "rxjs": "^7.8.1",
-    "sanity": "^3.40.0",
+    "sanity": "^3.42.1",
     "sanity-plugin-iframe-pane": "^3.1.6",
     "sanity-plugin-media": "^2.2.5",
     "server-only": "0.0.1",
-    "styled-components": "6.1.8",
+    "styled-components": "^6.1.11",
     "tailwind-merge": "^2.2.2"
   },
   "devDependencies": {
