--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@sanity/react-loader": "^1.9.19",
     "@sanity/ui": "^2.1.7",
     "@sanity/vision": "^3.42.1",
+    "@tailwindcss/container-queries": "^0.1.1",
     "@tailwindcss/typography": "^0.5.12",
     "cva": "^1.0.0-beta.1",
     "next": "^14.2.3",
